[gd_scene load_steps=12 format=3 uid="uid://ddycyagkmbqcf"]

[ext_resource type="Script" path="res://cleaned_movement.gd" id="1_yj6f0"]
[ext_resource type="PackedScene" uid="uid://kmyakts4l64t" path="res://addons/Basic FPS Player/Src/basic_player_head.tscn" id="2_dl8kq"]
[ext_resource type="Shader" path="res://vignette.gdshader" id="3_djmk4"]
[ext_resource type="Script" path="res://addons/Basic FPS Player/Src/speedlines.gd" id="4_lnrgx"]
[ext_resource type="Shader" path="res://outline.gdshader" id="5_csmif"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o00jp"]
shader = ExtResource("3_djmk4")
shader_parameter/blur_center = Vector2(0.5, 0.5)
shader_parameter/blur_power = 0.008
shader_parameter/sampling_count = 6
shader_parameter/alpha = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_li7ud"]
radius = 0.284445

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m01r7"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wmvk8"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cyshd"]
render_priority = 0
shader = ExtResource("5_csmif")
shader_parameter/outlineColor = Color(0, 0, 0, 1)
shader_parameter/depth_threshold = 0.025
shader_parameter/normal_threshold = 0.5
shader_parameter/normal_smoothing = 0.25
shader_parameter/max_thickness = 1.3
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_25edy"]
lightmap_size_hint = Vector2i(12, 12)
material = SubResource("ShaderMaterial_cyshd")
flip_faces = true
size = Vector2(2, 2)

[node name="Basic FPS Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4361, 0)
floor_stop_on_slope = false
floor_constant_speed = true
script = ExtResource("1_yj6f0")

[node name="Head" parent="." instance=ExtResource("2_dl8kq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.047)

[node name="ChestRays" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0.047)

[node name="RayCast3D" type="RayCast3D" parent="Head/ChestRays"]
target_position = Vector3(0, 0, -3)

[node name="RayCast3D2" type="RayCast3D" parent="Head/ChestRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.562651, 0)
target_position = Vector3(0, 0, -3)

[node name="HeadRays" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.226807, 0.047)

[node name="Left" type="RayCast3D" parent="Head/HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(-1, 1, -1)

[node name="Center" type="RayCast3D" parent="Head/HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 1, -1)

[node name="Right" type="RayCast3D" parent="Head/HeadRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(1, 1, -1)

[node name="SideRays" type="Node3D" parent="Head"]

[node name="Left" type="RayCast3D" parent="Head/SideRays"]
target_position = Vector3(-2, 0, 0)

[node name="Right" type="RayCast3D" parent="Head/SideRays"]
target_position = Vector3(2, 0, 0)

[node name="0_7" type="ColorRect" parent="Head"]
material = SubResource("ShaderMaterial_o00jp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_lnrgx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_li7ud")
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_m01r7")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_wmvk8")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.68925)
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_25edy")

[connection signal="enter_flow" from="." to="Head/0_7" method="_on_basic_fps_player_enter_flow"]
[connection signal="exit_flow" from="." to="Head/0_7" method="_on_basic_fps_player_exit_flow"]
